# csv2json

./: README.md  csv2json.cabal  stack.yaml
data/: variant-characters
examples/: example.csv  example.json  quotes.template.json
source/: Main.hs  VariantCharacters.hs
source/VariantCharacters/: Internal.hs
