name:           csv2json
version:        0.2.0.0
synopsis:       Converts CSV-formatted data to JSON-formatted data suitable for reading by the Readio platform.
license:        AllRightsReserved
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
category:       Data
build-type:     Simple
cabal-version:  >=1.10

executable csv2json
    main-is:            Main.hs
    hs-source-dirs:     source
    default-language:   Haskell2010
    build-depends:
        aeson,
        aeson-pretty,
        base,
        bytestring,
        cassava == 0.4.5.0,
        text,
        vector

