name:           csv2json
version:        0.3.0.0
synopsis:       Converts CSV-formatted data to JSON-formatted data suitable for reading by the Readio platform.
license:        AllRightsReserved
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
category:       Data
build-type:     Simple
cabal-version:  >=1.10

executable csv2json
    main-is:            Main.hs
    hs-source-dirs:     source
    default-language:   Haskell2010
    other-modules:
        VariantCharacters
        VariantCharacters.Internal
    build-depends:
        aeson             >= 0.11.2.1 && < 2.0,
        aeson-pretty      >= 0.7.2    && < 1.0,
        base              >= 4.8.2.0  && < 5.0,
        bytestring        >= 0.10.6.0 && < 1.0,
        cassava           >= 0.4.5.0  && < 0.5,
        containers        >= 0.5.7.1  && < 1.0,
        file-embed        >= 0.0.10   && < 1.0,
        th-lift-instances >= 0.1.11   && < 1.0,
        text              >= 1.2.2.1  && < 2.0,
        vector            >= 0.11.0.0 && < 1.0,
        template-haskell  >= 2.11.1.0 && < 3.0

